@@ -1,3 +1,8 @@
+2006-09-15  Akira TAGOH  <at@gclab.org>
+
+	* donrails/tool/td2db.rb: new file to import tDiary format files into
+	donrails.
+
 2006-09-14  Akira TAGOH  <at@gclab.org>
 
 	* donrails/tool/table-postgresql.txt: updated.
